--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vyhledávání pomocí klíčového spojení</title>
     <link rel="stylesheet" href="Styly.css">
+    <script src="config.js"></script>
 </head>
 <body>
     <h1>Stránka pro vyhledávání</h1>
@@ -15,7 +16,6 @@
         <div id="downloadArea">
             <a href="#" id="downloadLink" style="display: none;">Odkaz ke stažení výsledků vyhledávání.</a>
         </div>
-        <script src="config.js"></script>
         <script>
             var htmlContent = ''; // Proměnná pro uchování HTML obsahu stránky
             var newWindow = null; // Proměnná pro uchování otevřeného nového okna
@@ -26,7 +26,7 @@
                 
                 try {
                     // Získání obsahu stránky pomocí ScraperAPI
-                    const response = await fetch('https://api.scraperapi.com?api_key=' + encodeURIComponent(API_KEY) + '&url=' + encodeURIComponent(url));
+                    const response = await fetch('https://api.scraperapi.com?api_key=' + encodeURIComponent(window.API_KEY) + '&url=' + encodeURIComponent(url));
                     htmlContent = await response.text();
                     
                     // Otevře nové okno s výsledky vyhledávání
