--- a/index.html
+++ b/index.html
@@ -28,15 +28,19 @@
             try {
                 const response = await fetch('https://api.scraperapi.com?api_key=' + encodeURIComponent(window.API_KEY) + '&url=' + encodeURIComponent(url));
                 const htmlContent = await response.text();
-                const parser = new DOMParser();
-                const doc = parser.parseFromString(htmlContent, 'text/html');
-                const textContent = doc.body.innerText; // Extrahování pouze textového obsahu z těla HTML
+                const textContent = extractTextFromHTML(htmlContent); // Extrahovat text z HTML obsahu
                 console.log("Textový obsah stránky:", textContent);
                 openNewWindow(textContent); // Zavolání funkce pro otevření nového okna s výsledky
                 document.getElementById("downloadButton").style.display = "inline";
             } catch (error) {
                 console.error('Chyba při získávání obsahu stránky:', error);
             }
+        }
+
+        function extractTextFromHTML(html) {
+            const div = document.createElement('div');
+            div.innerHTML = html;
+            return div.textContent || div.innerText || '';
         }
 
         function openNewWindow(textContent) {
