--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
             var url = "https://www.google.com/search?q=" + encodeURIComponent(searchQuery);
             
             try {
-                const response = await fetch('https://api.scraperapi.com?api_key=' + encodeURIComponent(window.API_KEY) + '&url=' + encodeURIComponent(url));
+                const response = await fetch(url);
                 const htmlContent = await response.text();
-                const textContent = extractTextFromHTML(htmlContent); // Extrahovat text z HTML obsahu
+                const textContent = extractVisibleTextFromHTML(htmlContent); // Extrahovat viditelný text z HTML obsahu
                 console.log("Textový obsah stránky:", textContent);
                 openNewWindow(textContent); // Zavolání funkce pro otevření nového okna s výsledky
                 document.getElementById("downloadButton").style.display = "inline";
@@ -37,10 +37,10 @@
             }
         }
 
-        function extractTextFromHTML(html) {
-            const div = document.createElement('div');
-            div.innerHTML = html;
-            return div.textContent || div.innerText || '';
+        function extractVisibleTextFromHTML(html) {
+            const parser = new DOMParser();
+            const doc = parser.parseFromString(html, 'text/html');
+            return doc.body.innerText; // Extrahování pouze textového obsahu z těla HTML
         }
 
         function openNewWindow(textContent) {
