--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             var url = "https://www.google.com/search?q=" + encodeURIComponent(searchQuery);
             
             try {
-                const response = await fetch(url);
+                const response = await fetch('https://api.scraperapi.com?api_key=' + encodeURIComponent(window.API_KEY) + '&url=' + encodeURIComponent(url) + '&render=false');
                 const htmlContent = await response.text();
                 const textContent = extractVisibleTextFromHTML(htmlContent); // Extrahovat viditelný text z HTML obsahu
                 console.log("Textový obsah stránky:", textContent);
