--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
             var url = "https://www.google.com/search?q=" + encodeURIComponent(searchQuery);
             
             try {
-                window.open(url, "_blank"); // Otevření výsledků vyhledávání v novém okně
+                var newWindow = window.open(url, "_blank"); // Otevření výsledků vyhledávání v novém okně
+                newWindow.focus();
             } catch (error) {
                 console.error('Chyba při zobrazování stránky Google:', error);
             }
