--- a/index.html
+++ b/index.html
@@ -12,24 +12,29 @@
     <div class="Kolonka_vyhledávání">
         <input type="text" id="searchQuery" placeholder="Zadejte hledaný výraz"><br>
         <button onclick="searchGoogle()">Hledat</button>
+        <button onclick="printResults()" id="printButton" style="display: none;">Tisknout výsledky</button>
     </div>
     <script>
+        var newWindow = null;
+
         async function searchGoogle() {
             console.log("Funkce searchGoogle() byla spuštěna.");
             var searchQuery = document.getElementById("searchQuery").value;
             var url = "https://www.google.com/search?q=" + encodeURIComponent(searchQuery);
             
             try {
-                var newWindow = window.open(url, "_blank"); // Otevření výsledků vyhledávání v novém okně
+                newWindow = window.open(url, "_blank"); // Otevření výsledků vyhledávání v novém okně
                 newWindow.focus();
+                document.getElementById("printButton").style.display = "inline";
             } catch (error) {
                 console.error('Chyba při zobrazování stránky Google:', error);
             }
         }
-        function downloadResults() {
-            console.log("Funkce downloadResults() byla spuštěna.");
+
+        function printResults() {
+            console.log("Funkce printResults() byla spuštěna.");
             if (newWindow) {
-                newWindow.print(); // Tisk obsahu nového okna (stránka Google vyhledání)
+                newWindow.print(); // Tisk obsahu nového okna
             }
         }
     </script>
