--- a/index.html
+++ b/index.html
@@ -6,14 +6,13 @@
     <title>Vyhledávání pomocí klíčového spojení</title>
     <link rel="stylesheet" href="Styly.css">
     <script src="config.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script> <!-- Import knihovny jsPDF -->
 </head>
 <body>
     <h1>Stránka pro vyhledávání</h1>
     <div class="Kolonka_vyhledávání">
         <input type="text" id="searchQuery" placeholder="Zadejte hledaný výraz"><br>
         <button onclick="searchGoogle()">Hledat</button>
-        <button onclick="printResults()" id="printButton" style="display: none;">Stáhnout výsledky jako PDF</button>
+        <button onclick="openResultsInNewWindow()" id="downloadButton" style="display: none;">Stáhnout výsledky</button>
     </div>
     <script>
         var newWindow = null;
@@ -26,18 +25,16 @@
             try {
                 newWindow = window.open(url, "_blank"); // Otevření výsledků vyhledávání v novém okně
                 newWindow.focus();
-                document.getElementById("printButton").style.display = "inline";
+                document.getElementById("downloadButton").style.display = "inline";
             } catch (error) {
                 console.error('Chyba při zobrazování stránky Google:', error);
             }
         }
 
-        function printResults() {
-            console.log("Funkce printResults() byla spuštěna.");
+        function openResultsInNewWindow() {
+            console.log("Funkce openResultsInNewWindow() byla spuštěna.");
             if (newWindow) {
-                var pdf = new jsPDF(); // Vytvoření instance knihovny jsPDF
-                pdf.text(10, 10, 'Výsledky vyhledávání'); // Přidání textu do PDF
-                pdf.save('vysledky_vyhledavani.pdf'); // Uložení PDF souboru
+                newWindow.print(); // Spuštění tiskového dialogu prohlížeče na nově otevřené stránce
             }
         }
     </script>
